F. Discuss functionality of the model, including the impact of network architecture chosen

--- a/d604_task_2.ipynb
+++ b/d604_task_2.ipynb
@@ -3326,6 +3326,31 @@
     {
       "cell_type": "markdown",
       "source": [
+        "The LSTM-based neural network demonstrates effective functionality for classifying sentiment in Amazon product reviews, achieving 78.87% accuracy on unseen test data.\n",
+        "\n",
+        "**Core Functional Capabilities:**\n",
+        "\n",
+        "The model successfully performs binary sentiment classification, distinguishing between positive and negative product reviews with balanced performance across both classes (appoximately 80% precision and recall). Through embedding and padding layers, the model flexibly handles reviews of varying lengths up to 50 tokens, making it practical for real-world deployment. The LSTM architecture processes text sequentially, capturing contextual relationships that are crucial for sentiment analysis. For example, it correctly interprets phrases like \"not good\" as negative sentiment by understanding how the word \"not\" modifies the meaning of \"good.\"\n",
+        "\n",
+        "**Architectural Impact:**\n",
+        "\n",
+        "The choice of LSTM architecture significantly influences the model's capabilities. The 64-unit LSTM layer maintains internal memory that tracks information across word sequences, enabling recognition of sentiment patterns that depend on word order and context.\n",
+        "\n",
+        "The 50-dimensional embedding layer transforms words into dense vector representations, allowing the model to learn that semantically similar words like \"excellent\" and \"great\" share similar meanings in positive sentiment contexts. The 50% dropout layer provides critical regularization, preventing more severe overfitting while maintaining reasonable generalization to new reviews.\n",
+        "\n",
+        "The sigmoid output layer produces interpretable probability scores (0 to 1) rather than simple binary classifications, allowing organizations to set custom thresholds and flag uncertain predictions for human review.\n",
+        "\n",
+        "**Performance Trade-offs:**\n",
+        "\n",
+        "The architecture balances model complexity with dataset size. With only 693 training samples, a larger architecture would memorize training data, while a simpler model would lack capacity to capture nuanced language patterns. The design I chose achieves 80% accuracy while maintaining computational efficiency."
+      ],
+      "metadata": {
+        "id": "uyyTNjCW23BL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## G. Recommendations"
       ],
       "metadata": {
