G. Make recommendations of next steps

--- a/d604_task_2.ipynb
+++ b/d604_task_2.ipynb
@@ -3369,6 +3369,25 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Based on the model's 79.87% accuracy in classifying sentiment in Amazon product reviews, I recommend the following course of action:\n",
+        "\n",
+        "1. **Deploy for automated sentiment monitoring:** The model is sufficiently accurate to serve as a sentiment screening tool for Amazon product reviews. With approximately 80% accuracy and balanced precision/recall across both sentiment classes, it can effectively flag negative reviews for immediate attention, identify trends in customer satisfaction over time, and prioritize products receiving predominantly negative feedback for quality improvement initiatives.\n",
+        "\n",
+        "2. **Implement human-in-the-loop review:** The 20% error rate (30 misclassified reviews out of 149 in testing) means the model should function as a decision-support tool rather than an autonomous classifier. Human reviewers should validate high-stakes decisions such as product recalls or major design changes. Additionally, reviews with low confidence scores (predictions near 0.5) should be manually reviewed by analysts who can apply contextual understanding and business judgment that the model may miss.\n",
+        "\n",
+        "3. **Address overfitting through data expansion:** The significant gap between training accuracy (93.07%) and validation accuracy (74.32%) indicates overfitting due to the small dataset size of 693 training samples. To improve generalization, Amazon should collect additional labeled reviews to expand the training set. A datset of 5,000-10,000 reviews would likely reduce overfitting and improve validation performance.\n",
+        "\n",
+        "4. **Continuous monitoring and improcement:** Deploy the model with ongoing performance monitoring to detect concept drift (changes in how customers express sentiment over time) or emerging biases. Periodically retrain the model with newly collected reviews to maintain accuracy as language patterns and product types evolve. It's worth experimenting with different architectures or ensemble methods that combine multiple models to potentially exceed 80% accuracy.\n",
+        "\n",
+        "**Conclusion:** The model successfully demonstrates that neural networks can classify sentiment in Amazon product reviews with reasonable accuracy, directly answering the research question affirmatively. It's ready for deployment as a decision-support tool that automates initial sentiment screening while maintaining appropriate human oversight. The 80% accuracy provides substantial value by reducing manual review workload, but the remaining limitations underscore the importance of combining automated processing with human judgment for optimal customer feedback analysis."
+      ],
+      "metadata": {
+        "id": "vepIlNYN5y51"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## H. Reporting"
       ],
       "metadata": {
